--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
   mongo-express:
     image: mongo-express
     restart: on-failure
+    depends_on:
+      - mongo
     ports:
       - 27018:8081
     environment:
@@ -29,6 +31,8 @@ services:
   redis-commander:
     image: rediscommander/redis-commander:latest
     restart: on-failure
+    depends_on:
+      - redis
     environment:
       - REDIS_HOSTS=local:redis:6379
     ports:
