--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,12 @@
+#
+# Copyright (C) 2019 Pierre Letessier
+#
+# This source code is licensed under the BSD 3 license found in the
+# LICENSE file in the root directory of this source tree.
+#
+
 cmake_minimum_required(VERSION 3.7)
 project(cpp_taranis)
-
-#set(PYTHON_EXECUTABLE /home/pletessier/Dev/pletessier/taranis/venv_debug/bin/python)
 
 set(CMAKE_CXX_STANDARD 11)
 
