--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@ jobs:
       - image: pletessier/taranis:0.1.0
     steps:
       - checkout
-      - run:  cd src/python/models/
-      - run:  python setup.py sdist bdist_wheel
-      - run:  python -m twine upload --username $pypi_username --password $pypi_password dist/*
+      - run:
+          working_directory: src/python/models/
+          command: python setup.py sdist bdist_wheel
+      - run:
+          working_directory: src/python/models/
+          command: python -m twine upload --username $pypi_username --password $pypi_password dist/*
