--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,6 @@ attrs==19.1.0
 bson==0.5.8
 certifi==2019.3.9
 Click==7.0
-dotmap==1.3.8
-dynaconf==2.0.2
 flask-restplus==0.12.1
 Flask==1.0.3
 git+https://github.com/tr11/python-configuration.git
@@ -24,8 +22,7 @@ pymongo==3.8.0
 pyrsistent==0.15.2
 python-box==3.4.0
 python-dateutil==2.8.0
-python-dotenv==0.10.2
-Python-EasyConfig==0.1.7
+python-configuration-wrapper==1.1.0
 pytz==2019.1
 PyYAML==5.1
 Resource==0.2.1
